--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes
 =======
 
+0.02 - 01 Feb 2007
+  * Not much interesting changes, no need to update.
+  - Minor documentation fixes.
+  - Use Module::Install.
+
 0.01 - 06 Mar 2006
-  - Released onto the unsuspecting world. 
+  - Released unto the unsuspecting world. 
