Import of DMAKI/XML-RSS-Liberal-0.03_01 from CPAN.
gitpan-cpan-distribution: XML-RSS-Liberal
gitpan-cpan-version:      0.03_01
gitpan-cpan-path:         DMAKI/XML-RSS-Liberal-0.03_01.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes
 =======
 
+0.03_01 - 14 Mar 2007
+  - Work with XML::RSS::LibXML 0.30.
+
 0.02 - 01 Feb 2007
   * Not much interesting changes, no need to update.
   - Minor documentation fixes.
